Fix dark mode forced (Maybe)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,8 +31,12 @@
 */
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  color-scheme: only light;
+  --background: #0a0a0a;
+  --foreground: #ededed;
+
+  /*--background: #ffffff;*/
+  /*--foreground: #171717;*/
 }
 
 @media (prefers-color-scheme: light) {
